--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -115,7 +115,7 @@ attributelink.uniProt.Protein.*.primaryAccession.text=uniprot: <<attributeValue>
 attributelink.uniProt.Protein.*.primaryAccession.imageName=uniprot_logo_link.jpeg
 
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
-attributelink.interPro.ProteinDomain.*.interproId.text=interpro: <<attributeValue>>
+attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=interpro: <<attributeValue>>
 
 attributelink.omim.Disease.*.omimId.url=http://www.ncbi.nlm.nih.gov/entrez/dispomim.cgi?id=<<attributeValue>>
 attributelink.omim.Disease.*.omimId.text=OMIM: <<attributeValue>>
