--- a/fishmine/webapp/build.xml
+++ b/fishmine/webapp/build.xml
@@ -13,6 +13,8 @@
       <patternset>
   	<include name="WEB-INF/struts-config.xml"/>
         <include name="WEB-INF/tiles-defs.xml"/>
+        <include name="WEB-INF/classes/InterMineWebApp.properties"/>
+        <include name="WEB-INF/classes/model.properties"/>
       </patternset>
     </unwar>
 
@@ -33,6 +35,10 @@
       <replacetoken><![CDATA[<!--@MODEL_FORM_INCLUDE@-->]]></replacetoken>
     </replace>
 
+    <!-- merge InterMine and model internationalisation properties files -->
+    <concat destfile="${build.dir}/webapp/WEB-INF/classes/InterMineWebApp.properties" append="yes">
+      <fileset file="resources/model.properties"/>
+    </concat>
 
     <loadfile property="model.tiles.defs" srcFile="./resources/tiles-defs-model.xml"/>
 
