--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -9,7 +9,7 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=MAL13P1.189, PFL2415w, gene.34362, PFI1255w 
+bag.example.identifiers=ZDB-ALT-000913-2
 
 # quicksearch examples
 quickSearch.identifiers = e.g example identifier
