more config for fishmine

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -9,7 +9,7 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=ZDB-ALT-000913-2
+bag.example.identifiers=pbx4, ZDB-GENE-000201-13, cmn, ENSDARG00000017832, ENSDARG00000009473, urod, kal1a, crestin
 
 # quicksearch examples
 quickSearch.identifiers = e.g example identifier
