--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -34,4 +34,4 @@ attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeVal
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
-theme = modmine
+theme = zen_spice
