--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -161,5 +161,4 @@ quickSearch.lists = e.g. transcription factors
 #list of pages with fixed width layout
 #layout.fixed = begin,template,templates,bag,customQuery,query
 layout.fixed = template,templates,bag,customQuery,query
-
-theme = modmine
+theme = blue
