--- a/snpmine/dbmodel/project.properties
+++ b/snpmine/dbmodel/project.properties
@@ -5,7 +5,7 @@ model.name = genomic
 
 core.model.path = bio/core
 
-extra.model.paths.start = bio/core/genomic_additions.xml bio/sources/so/so_additions.xml bio/sources/dbSNP/dbSNP_additions.xml
+extra.model.paths.start = bio/sources/so/so_additions.xml bio/core/genomic_additions.xml 
 extra.model.paths.end = bio/core/shortcuts.xml
 # choose the intermine.properties file from $HOME:
 intermine.properties.file = snpmine.properties
