better example list. a link out to zfin.
Former-commit-id: a81430411fc5985666b44a5027f73f75b7559553

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -9,7 +9,7 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=pbx4, ZDB-GENE-000201-13, cmn, ENSDARG00000017832, ENSDARG00000009473, urod, kal1a, crestin
+bag.example.identifiers=ENSDARG00000071621, snn, atp1a3al, ZDB-GENE-021231-1, regucalcin, cryzl1, tk1, ZDB-GENE-061009-52, ENSDARG00000062177
 
 # quicksearch examples
 quickSearch.identifiers = e.g example identifier
@@ -31,6 +31,10 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
+
+attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=<<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
