--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -12,7 +12,7 @@ begin.browse.template=A_IdentifierSynonym_Object
 bag.example.identifiers=ENSDARG00000071621, snn, atp1a3al, ZDB-GENE-021231-1, regucalcin, cryzl1, tk1, ZDB-GENE-061009-52, ENSDARG00000062177
 
 # quicksearch examples
-quickSearch.identifiers = e.g example identifier
+quickSearch.identifierRs = e.g example identifier
 quickSearch.templates = e.g. example template name
 quickSearch.lists = e.g. example list name
 
