--- a/fishmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/fishmine/dbmodel/resources/objectstoresummary.config.properties
@@ -1,16 +1,20 @@
 # fields = summarised by the post process summarise-objectstore, these fields appear in a dropdown (instead of a text box) in forms in the webapp
 max.field.values = 200
-org.intermine.model.bio.Chromosome.fields = primaryIdentifier
+
+org.intermine.model.bio.OntologyRelation.fields = relationship
 org.intermine.model.bio.DataSet.fields = title
 org.intermine.model.bio.DataSource.fields = name
-org.intermine.model.bio.InfoSource.fields = title
-org.intermine.model.bio.Location.fields = endPhase phase strand
 org.intermine.model.bio.Organism.fields = abbreviation genus name shortName species taxonId
 org.intermine.model.bio.Synonym.fields = type
-org.intermine.model.bio.OntologyRelation.fields = relationship
-org.intermine.model.bio.Synonym.fields = type
-org.intermine.model.bio.PartialLocation.fields = endPhase phase strand
+org.intermine.model.bio.GOAnnotation.fields = qualifier
+org.intermine.model.bio.GOEvidenceCode.fields = code
+org.intermine.model.bio.OntologyTerm.fields = namespace
+org.intermine.model.bio.Gene.fields = featureType
+org.intermine.model.bio.ProteinDomain.fields = type
+org.intermine.model.bio.UniProtFeature.fields = type
 
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
-
+org.intermine.model.bio.ProteinDomain.autocomplete = name shortName
+org.intermine.model.bio.OntologyTerm.autocomplete = name
+org.intermine.model.bio.Protein.autocomplete = ecNumber
