--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -36,6 +36,16 @@ attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdr
 attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
+attributelink.ensembl.Gene.7955.secondaryIdentifier.url=http://www.ensembl.org/Drosophila_melanogaster/geneview?db=core&gene=<<attributeValue>>
+attributelink.ensembl.Gene.7955.secondaryIdentifier.text=ensembl: <<attributeValue>>
+attributelink.ensembl.Gene.7955.secondaryIdentifier.imageName=ensembl_logo_link.gif
+
+attributelink.uniProt.Protein.*.primaryIdentifier.url=http://www.uniprot.org/entry/<<attributeValue>>
+attributelink.uniProt.Protein.*.primaryIdentifier.text=uniprot: <<attributeValue>>
+attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jpeg
+attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
+attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
+
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
 theme = green
