--- a/intermine/all/build.xml
+++ b/intermine/all/build.xml
@@ -27,6 +27,7 @@
       <fileset dir="../.." includes="intermine/integrate/test/build.xml"/>
       <fileset dir="../.." includes="intermine/web/test/build.xml"/>
       <fileset dir="../.." includes="intermine/pathquery/test/build.xml"/>
+      <fileset dir="../.." includes="intermine/webservice/client/test/build.xml"/>
 <!--      <fileset dir="../.." includes="testmodel/webapp/test/build.xml"/>-->
     </subant>
   </target>
