more fish config

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -9,7 +9,7 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=ENSDARG00000071621, snn, atp1a3al, ZDB-GENE-021231-1, regucalcin, cryzl1, tk1, ZDB-GENE-061009-52, ENSDARG00000062177
+bag.example.identifiers=ENSDARG00000071621, snn, ZDB-GENE-021231-1, cryzl1, tk1, ENSDARG00000062177,  ZDB-GENE-000112-47, jup, erm
 
 # quicksearch examples
 quickSearch.identifierRs = e.g example identifier
@@ -48,4 +48,4 @@ attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attrib
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
-theme = green
+theme = blue
