fixed link to ensembl
Former-commit-id: e4ea9a0a08536584fede86d89db42a2f837ae341

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -36,7 +36,7 @@ attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdr
 attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
-attributelink.ensembl.Gene.7955.secondaryIdentifier.url=http://www.ensembl.org/Drosophila_melanogaster/geneview?db=core&gene=<<attributeValue>>
+attributelink.ensembl.Gene.7955.secondaryIdentifier.url=http://www.ensembl.org/Danio_rerio/Gene/Summary?g=<<attributeValue>>
 attributelink.ensembl.Gene.7955.secondaryIdentifier.text=ensembl: <<attributeValue>>
 attributelink.ensembl.Gene.7955.secondaryIdentifier.imageName=ensembl_logo_link.gif
 
