--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -9,7 +9,7 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=belladonna, ENSDARG00000071621, snn, ZDB-GENE-021231-1, cryzl1, UEVLD_DANRE, tk1, ENSDARG00000062177,  ZDB-GENE-000112-47, jup, erm
+bag.example.identifiers=belladonna, UEVLD_DANRE, krt4, ENSDARG00000003051, hey1, ZDB-GENE-000607-13,  cdc25, clock, ZDB-GENE-991110-10
 
 # quicksearch examples
 quickSearch.identifierRs = e.g example identifier
