rename low quality matches to synonyms, per gos

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -424,8 +424,8 @@ results.lookup.unresolved.one = Could not resolve a {0} for identifier: {1}
 results.lookup.unresolved.many = Could not resolve {0} objects for identifiers: {1}
 results.lookup.duplicate.one = One identifier matched multiple objects: {0}
 results.lookup.duplicate.many = Some identifiers matched multiple objects: {0}
-results.lookup.lowQuality.one = One identifier gave a low quality match: {0}
-results.lookup.lowQuality.many = Some identifiers gave low quality matches: {0}
+results.lookup.lowQuality.one = One identifier is a synonym: {0}
+results.lookup.lowQuality.many = Some identifiers are synonyms: {0}
 results.lookup.wildcard.oneone = Wildcard matched one object: {0}
 results.lookup.wildcard.one = Wildcard matched multiple objects: {0}
 results.lookup.wildcard.many = Wildcards matched multiple objects: {0}
