--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -14,7 +14,7 @@ org.intermine.model.bio.OntologyRelation.fields = relationship
 org.intermine.model.bio.Organism.fields = abbreviation genus name name genus shortName species taxonId
 org.intermine.model.bio.Project.autocomplete = title
 org.intermine.model.bio.Project.fields = name surnamePI
-org.intermine.model.bio.Submission.fields = design factorName factorType qualityControl replicate
+org.intermine.model.bio.Submission.fields = design qualityControl replicate
 org.intermine.model.bio.SubmissionData.fields = name type value
 org.intermine.model.bio.SubmissionDataAttribute.fields = name type value
 org.intermine.model.bio.Protocol.fields = name type
