--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -46,6 +46,14 @@ attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jp
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=modencodemine
+attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
+attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
+
+attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
+attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
+attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
+
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
 theme = blue
