--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -32,6 +32,26 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
 
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=modencodemine
+attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
+attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
+
+attributelink.homologene.Gene.4932.symbol.url=http://www.ncbi.nlm.nih.gov/sites/entrez?Db=homologene&cmd=detailssearch&term=txid4932[orgn]+<<attributeValue>>[Gene]
+attributelink.homologene.Gene.4932.symbol.text=Homologene: <<attributeValue>>
+attributelink.homologene.Gene.4932.symbol.imageName=homologene_logo_link.png
+
+attributelink.entrez_gene.Gene.4932.ncbiGeneNumber.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=gene&cmd=Retrieve&dopt=full_report&list_uids=<<attributeValue>>
+attributelink.entrez_gene.Gene.4932.ncbiGeneNumber.text=Entrez Gene: <<attributeValue>>
+attributelink.entrez_gene.Gene.4932.ncbiGeneNumber.imageName=entrezgene_logo_link.png
+
+attributelink.SGD.Gene.4932.primaryIdentifier.url=http://db.yeastgenome.org/cgi-bin/locus.pl?dbid=<<attributeValue>>
+attributelink.SGD.Gene.4932.primaryIdentifier.text=SGD: <<attributeValue>>
+attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
+
+attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
+attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
+attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
+
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
 
