--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -46,13 +46,28 @@ attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jp
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
-attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=modencodemine
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
 attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
 attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
+
+# ----------- intermine links -----------------------
+
+attributelink.flymine.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
+attributelink.flymine.Gene.7227.primaryIdentifier.list.text=FlyMine
+attributelink.flymine.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flymine.Gene.7227.primaryIdentifier.list.usePost=true
+
+attributelink.flymine.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
+attributelink.flymine.Gene.4932.primaryIdentifier.list.text=SGD protomine
+attributelink.flymine.Gene.4932.primaryIdentifier.list.imageName=sgd_logo.png
+attributelink.flymine.Gene.4932.primaryIdentifier.list.usePost=true
+
+
+
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
