--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -32,7 +32,7 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
 
-attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=modencodemine
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine
 attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
@@ -51,6 +51,14 @@ attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
 attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
+
+
+# ----------- intermine links -----------------------
+
+# orthologue links
+class=Gene&orthologue=organism2_shortName
+
+
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
