remove orthologue link outs, those don't work yet

--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -58,7 +58,27 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 # orthologue links
 class=Gene&orthologue=organism2_shortName
 
+# to flymine
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.text=FlyMine
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.usePost=true
 
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20melanogaster
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
+
+# to zfin
+attributelink.zfinList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine
+attributelink.zfinList.Gene.7955.primaryIdentifier.list.text=ZFIN protomine
+attributelink.zfinList.Gene.7955.primaryIdentifier.list.imageName=zfinlogo.png
+attributelink.zfinList.Gene.7955.primaryIdentifier.list.usePost=true
+
+#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20rerio
+#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=D.rerio orthologues in ZFIN protomine
+#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
+#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
