--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -728,6 +728,7 @@ errors.importFailedException = Import of query(ies) failed. Invalid format of qu
 errors.importQuery.noqueries = No valid queries found
 errors.badportalquery = Bad link into InterMine
 errors.badportalclass = No class or wrong class specified
+errors.noportalorthologues = No orthologues were found.
 #errors.pollquery.badqid = I'm sorry, I can't find a running query with qid {0}
 errors.pollquery.emptyqid = No qid specified. (qid is "{0}")
 errors.pollquery.cancelled = Query cancelled (qid was "{0}")
