fixed ortho links
Former-commit-id: e3a9b6fe68a59579513ff34fab057bfc209795b1

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -56,18 +56,19 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 
 # ----------- intermine links -----------------------
 
-attributelink.flymine.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
-attributelink.flymine.Gene.7227.primaryIdentifier.list.text=FlyMine
-attributelink.flymine.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
-attributelink.flymine.Gene.7227.primaryIdentifier.list.usePost=true
+attributelink.flymineList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
+attributelink.flymineList.Gene.7955.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+attributelink.flymineList.Gene.7955.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
 
-attributelink.flymine.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
-attributelink.flymine.Gene.4932.primaryIdentifier.list.text=SGD protomine
-attributelink.flymine.Gene.4932.primaryIdentifier.list.imageName=sgd_logo.png
-attributelink.flymine.Gene.4932.primaryIdentifier.list.usePost=true
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S.%20cerevisiae
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae orthologues in SGD protomine
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=sgd_logo.png
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
 
-
-
+attributelink.sgd.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.sgd.Gene.4932.primaryIdentifier.list.text=ZFIN: <<attributeValue>>
+attributelink.sgd.Gene.4932.primaryIdentifier.list.imageName=sgd_logo.png
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
