--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -64,10 +64,10 @@ attributelink.flymineList.Gene.7227.primaryIdentifier.list.text=FlyMine
 attributelink.flymineList.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
 attributelink.flymineList.Gene.7227.primaryIdentifier.list.usePost=true
 
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20melanogaster
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
+attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20melanogaster
+attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
 # to zfin
 attributelink.zfinList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine
@@ -75,10 +75,10 @@ attributelink.zfinList.Gene.7955.primaryIdentifier.list.text=ZFIN protomine
 attributelink.zfinList.Gene.7955.primaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinList.Gene.7955.primaryIdentifier.list.usePost=true
 
-#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20rerio
-#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=D.rerio orthologues in ZFIN protomine
-#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
-#attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20rerio
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=D.rerio orthologues in ZFIN protomine
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
