--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -46,15 +46,35 @@ attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jp
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
-attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
-attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
-attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
-
 attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
 
-# ----------- intermine links -----------------------
+# -------------------- intermine links --------------------------
+
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=fishprotomine
+attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
+attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
+
+attributelink.sgdproto.Gene.4932.primaryIdentifier.url=http://www.flymine.org/sgd/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.sgdproto.Gene.4932.primaryIdentifier.text=SGD protomine: <<attributeValue>>
+attributelink.sgdproto.Gene.4932.primaryIdentifier.imageName=sgd_logo.png
+
+attributelink.SGD.Gene.4932.primaryIdentifier.url=http://db.yeastgenome.org/cgi-bin/locus.pl?dbid=<<attributeValue>>
+attributelink.SGD.Gene.4932.primaryIdentifier.text=SGD: <<attributeValue>>
+attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
+
+attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=<<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
+
+attributelink.zfinproto.Gene.7955.primaryIdentifier.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>
+attributelink.zfinproto.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
+attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
+
+
+
+# ----------- ortho links -----------------------
 
 attributelink.flymineList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
 attributelink.flymineList.Gene.7955.primaryIdentifier.list.text=D.mel orthologues in FlyMine
@@ -63,12 +83,10 @@ attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
 
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S.%20cerevisiae
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae orthologues in SGD protomine
-attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=sgd_logo.png
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_link.gif
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
 
-attributelink.sgd.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene
-attributelink.sgd.Gene.4932.primaryIdentifier.list.text=ZFIN: <<attributeValue>>
-attributelink.sgd.Gene.4932.primaryIdentifier.list.imageName=sgd_logo.png
+
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
