--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -44,41 +44,35 @@ attributelink.entrez_gene.Gene.4932.ncbiGeneNumber.url=http://www.ncbi.nlm.nih.g
 attributelink.entrez_gene.Gene.4932.ncbiGeneNumber.text=Entrez Gene: <<attributeValue>>
 attributelink.entrez_gene.Gene.4932.ncbiGeneNumber.imageName=entrezgene_logo_link.png
 
-attributelink.SGD.Gene.4932.primaryIdentifier.url=http://db.yeastgenome.org/cgi-bin/locus.pl?dbid=<<attributeValue>>
-attributelink.SGD.Gene.4932.primaryIdentifier.text=SGD: <<attributeValue>>
-attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
-
 attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
 
+attributelink.SGD.Gene.4932.primaryIdentifier.url=http://db.yeastgenome.org/cgi-bin/locus.pl?dbid=<<attributeValue>>
+attributelink.SGD.Gene.4932.primaryIdentifier.text=SGD: <<attributeValue>>
+attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
 
-# ----------- intermine links -----------------------
+attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=<<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
-# orthologue links
-class=Gene&orthologue=organism2_shortName
+attributelink.zfin.Gene.7955.primaryIdentifier.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
+attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
-# to flymine
-attributelink.flymineList.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine
-attributelink.flymineList.Gene.7227.primaryIdentifier.list.text=FlyMine
-attributelink.flymineList.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
-attributelink.flymineList.Gene.7227.primaryIdentifier.list.usePost=true
 
-attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20melanogaster
+# ----------- ortho links -----------------------
+
+attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
 attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
 attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
 attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
-# to zfin
-attributelink.zfinList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&origin=yeastprotomine
+attributelink.zfinList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&orthologue=D.%20rerio
 attributelink.zfinList.Gene.7955.primaryIdentifier.list.text=ZFIN protomine
 attributelink.zfinList.Gene.7955.primaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinList.Gene.7955.primaryIdentifier.list.usePost=true
 
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&origin=yeastprotomine&orthologue=D.%20rerio
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=D.rerio orthologues in ZFIN protomine
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
