--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -48,17 +48,19 @@ attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/unip
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
 
+# ------------ intermine links -----------------
+
 attributelink.SGD.Gene.4932.primaryIdentifier.url=http://db.yeastgenome.org/cgi-bin/locus.pl?dbid=<<attributeValue>>
 attributelink.SGD.Gene.4932.primaryIdentifier.text=SGD: <<attributeValue>>
-attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
+attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_large.png
 
 attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=<<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
-attributelink.zfin.Gene.7955.primaryIdentifier.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>
-attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
-attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
+attributelink.zfinproto.Gene.7955.primaryIdentifier.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>
+attributelink.zfinproto.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
+attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
 
 # ----------- ortho links -----------------------
@@ -68,10 +70,10 @@ attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel ort
 attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
 attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
-attributelink.zfinList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&orthologue=D.%20rerio
-attributelink.zfinList.Gene.7955.primaryIdentifier.list.text=ZFIN protomine
-attributelink.zfinList.Gene.7955.primaryIdentifier.list.imageName=zfinlogo.png
-attributelink.zfinList.Gene.7955.primaryIdentifier.list.usePost=true
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&orthologue=D.%20rerio
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=ZFIN protomine
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
 
 #list of pages with fixed width layout
