--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -58,7 +58,7 @@ attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gi
 
 attributelink.sgdproto.Gene.4932.primaryIdentifier.url=http://www.flymine.org/sgd/portal.do?externalid=<<attributeValue>>&class=Gene
 attributelink.sgdproto.Gene.4932.primaryIdentifier.text=SGD protomine: <<attributeValue>>
-attributelink.sgdproto.Gene.4932.primaryIdentifier.imageName=sgd_logo.png
+attributelink.sgdproto.Gene.4932.primaryIdentifier.imageName=SGD_logo_large.png
 
 attributelink.SGD.Gene.4932.primaryIdentifier.url=http://db.yeastgenome.org/cgi-bin/locus.pl?dbid=<<attributeValue>>
 attributelink.SGD.Gene.4932.primaryIdentifier.text=SGD: <<attributeValue>>
@@ -67,11 +67,6 @@ attributelink.SGD.Gene.4932.primaryIdentifier.imageName=SGD_logo_link.gif
 attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=<<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
-
-attributelink.zfinproto.Gene.7955.primaryIdentifier.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>
-attributelink.zfinproto.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
-attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
-
 
 
 # ----------- ortho links -----------------------
@@ -83,10 +78,8 @@ attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
 
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S.%20cerevisiae
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae orthologues in SGD protomine
-attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_link.gif
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_large.png
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
-
-
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
