Add webapp and config to snpmine.

--- a/snpmine/default.intermine.integrate.properties
+++ b/snpmine/default.intermine.integrate.properties
@@ -5,6 +5,8 @@ os.query.max-limit=10000000
 os.query.max-offset=100000000
 os.queue-len=100
 
+dataLoader.allowMultipleErrors=false
+
 # production database #
 
 os.production.class=org.intermine.objectstore.intermine.ObjectStoreInterMineImpl
