--- a/snpmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/snpmine/dbmodel/resources/objectstoresummary.config.properties
@@ -1,11 +1,14 @@
 max.field.values = 100
-org.flymine.model.genomic.DataSet.fields = title
-org.flymine.model.genomic.DataSource.fields = name
-org.flymine.model.genomic.InfoSource.fields = title
-org.flymine.model.genomic.Location.fields = endPhase phase strand
-org.flymine.model.genomic.Organism.fields = abbreviation genus name name genus shortName shortName species taxonId
-org.flymine.model.genomic.Synonym.fields = type
-org.flymine.model.genomic.HaemAtlasResult = sample sampleName group
-org.flymine.model.genomic.GOTerm.autocomplete = name
-org.flymine.model.genomic.Gene.autocomplete = symbol
-org.flymine.model.genomic.OMIM.autocomplete = title
+org.intermine.model.bio.DataSet.fields = title
+org.intermine.model.bio.DataSource.fields = name
+org.intermine.model.bio.InfoSource.fields = title
+org.intermine.model.bio.Location.fields = endPhase phase strand
+org.intermine.model.bio.Organism.fields = abbreviation genus name name genus shortName shortName species taxonId
+org.intermine.model.bio.Synonym.fields = type
+org.intermine.model.bio.Chromosome.fields = primaryIdentifier
+org.intermine.model.bio.EnsemblSNP.fields = allele1 allele2 
+org.intermine.model.bio.ConsequenceType.fields = type
+org.intermine.model.bio.Source.fields = source
+org.intermine.model.bio.ValidationState.fields = state
+
+
