--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -71,12 +71,12 @@ attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
 # ----------- ortho links -----------------------
 
-attributelink.flymineList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
-attributelink.flymineList.Gene.7955.primaryIdentifier.list.text=D.mel orthologues in FlyMine
-attributelink.flymineList.Gene.7955.primaryIdentifier.list.imageName=flymine_logo_link.gif
-attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
+#attributelink.flymineList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
+#attributelink.flymineList.Gene.7955.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+#attributelink.flymineList.Gene.7955.primaryIdentifier.list.imageName=flymine_logo_link.gif
+#attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
 
-attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S.%20cerevisiae
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http:///www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S. cerevisiae
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae orthologues in SGD protomine
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_large.png
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
