--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -65,16 +65,15 @@ attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
 # ----------- ortho links -----------------------
 
-attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
-attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
-attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
-attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
+#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>&class=Gene&orthologue=D.%20rerio
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=ZFIN protomine
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http:///www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
+attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=D.rerio orthologues at ZFIN protomine
 attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
-
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
