--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -70,10 +70,10 @@ attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 #attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
 #attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.url=http:///www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.text=D.rerio orthologues at ZFIN protomine
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.imageName=zfinlogo.png
-attributelink.zfinOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http:///www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.text=D.rerio orthologues at ZFIN protomine
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.imageName=zfinlogo.png
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.usePost=true
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
