added comment.  removed duplicate link

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -32,17 +32,10 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
 
-attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=<<attributeValue>>
-attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
-attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
-
 attributelink.ensembl.Gene.7955.secondaryIdentifier.url=http://www.ensembl.org/Danio_rerio/Gene/Summary?g=<<attributeValue>>
 attributelink.ensembl.Gene.7955.secondaryIdentifier.text=ensembl: <<attributeValue>>
 attributelink.ensembl.Gene.7955.secondaryIdentifier.imageName=ensembl_logo_link.gif
 
-attributelink.uniProt.Protein.*.primaryIdentifier.url=http://www.uniprot.org/entry/<<attributeValue>>
-attributelink.uniProt.Protein.*.primaryIdentifier.text=uniprot: <<attributeValue>>
-attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jpeg
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
@@ -76,7 +69,7 @@ attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 #attributelink.flymineList.Gene.7955.primaryIdentifier.list.imageName=flymine_logo_link.gif
 #attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
 
-attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http:///www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S. cerevisiae
+attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S. cerevisiae
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae orthologues in SGD protomine
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_large.png
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
