remove obsolete key
Former-commit-id: a9882853ea84b133e5c487258a721ff5dd554d9e

--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -129,7 +129,7 @@ attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/show_
 attributelink.KEGG.Pathway.*.identifier.text=KEGG: <<attributeValue>>
 attributelink.KEGG.Pathway.*.identifier.imageName=KEGG_logo_mini.gif
 
-attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=
+attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/pubmed/<<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.text=PMID: <<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 
