--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -9,7 +9,7 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=S000000001, S000000002
+bag.example.identifiers=S000000001, S000000002, FUN12, YAL048C
 
 # quicksearch examples
 quickSearch.identifiers = e.g example identifier
@@ -25,7 +25,7 @@ quickSearch.lists = e.g. example list name
 #     attribute/organism/class combination
 # 5. logo images should be located in bio/webapp/resources/webapp/model/images/
 
-attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=
+attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/pubmed/<<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.text=PMID: <<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 
