add go term to autocomplete

--- a/fishmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/fishmine/dbmodel/resources/objectstoresummary.config.properties
@@ -16,4 +16,5 @@ org.intermine.model.bio.UniProtFeature.fields = type
 # index is created in post process create-autocomplete-index
 org.intermine.model.bio.ProteinDomain.autocomplete = name shortName
 org.intermine.model.bio.OntologyTerm.autocomplete = name
+org.intermine.model.bio.GOTerm.autocomplete = name
 org.intermine.model.bio.Protein.autocomplete = ecNumber
