--- a/yeastmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/yeastmine/dbmodel/resources/objectstoresummary.config.properties
@@ -11,6 +11,8 @@ org.intermine.model.bio.OntologyRelation.fields = relationship
 org.intermine.model.bio.Synonym.fields = type
 org.intermine.model.bio.PartialLocation.fields = endPhase phase strand
 
+
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
-
+org.intermine.model.bio.GOTerm.autocomplete = name
+org.intermine.model.bio.Protein.autocomplete = ecNumber
